--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "bootstrap": "^4.5.3",
+    "emailjs-com": "^2.6.4",
     "jquery": "^3.5.1",
     "react": "^16.2.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.2.0",
     "react-ga": "^2.7.0",
     "react-grid-gallery": "^0.5.5",
+    "react-image-gallery": "^1.0.8",
     "react-photo-gallery": "^8.0.0",
     "react-player": "^2.7.2",
     "react-scripts": "1.0.17"
