--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-player": "^2.7.2",
     "react-scripts": "1.0.17"
   },
+  "homepage": "https://rafidakhter.github.io/RafidAkhterPortfilio/.",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
