--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.11.2",
     "bootstrap": "^4.5.3",
     "emailjs-com": "^2.6.4",
+    "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "react": "^16.2.0",
     "react-bootstrap": "^1.4.0",
